# rsync_qt

./: README.md
rsync_qt/: CMakeLists.txt  Main.qml  RsyncRunner.cpp  RsyncRunner.h  font.qrc  main.cpp  rsync_bash
tuning_app/: SDK.md
tuning_app/README/: ekf_guide.md
tuning_app/rsync_qt/: .ninja_deps  .ninja_log  CMakeCache.txt  apprsync_qt  apprsync_qt_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
tuning_app/rsync_qt/.cmake/api/v1/reply/: cache-v2-42941ec5303276c4ae29.json  cmakeFiles-v1-22a50d4e18ad37e28a95.json  codemodel-v2-9e11013851cff9906a6e.json  directory-.-Debug-8eed96fbcd3ea58255a9.json  index-2025-10-26T05-11-38-0757.json  target-all_aotstats-Debug-9b4783e148d6495065f4.json  target-all_qmllint-Debug-622d63ac9e0daba97c87.json  target-all_qmllint_json-Debug-7e12921dc8b32a40422e.json  target-all_qmllint_module-Debug-5b9d02197f75c4f6a45a.json  target-all_qmltyperegistrations-Debug-f88d2da1ff6c022a49ae.json  target-apprsync_qt-Debug-2004771d71f9d04f0764.json  target-apprsync_qt_autogen-Debug-3f6b565afd4a4815bbac.json  target-apprsync_qt_autogen_timestamp_deps-Debug-f4e86f4705046c8f1d6d.json  target-apprsync_qt_copy_qml-Debug-7f59d10b6bae02593eaa.json  target-apprsync_qt_copy_res-Debug-15c9fc6790e6cbde28cb.json  target-apprsync_qt_qmlimportscan-Debug-adb980313b6feb9f00f8.json  (+5 more)
tuning_app/rsync_qt/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  apprsync_qt_qml.cmake  apprsync_qt_res.cmake
tuning_app/rsync_qt/.qt/deploy_qml_imports/: apprsync_qt.cmake
tuning_app/rsync_qt/.qt/qml_imports/: apprsync_qt_build.cmake  apprsync_qt_build.rsp  apprsync_qt_conf.rsp
tuning_app/rsync_qt/.qt/rcc/: apprsync_qt_raw_qml_0.qrc  qmake_rsync_qt.qrc  qrc_apprsync_qt_raw_qml_0.cpp  qrc_qmake_rsync_qt.cpp
tuning_app/rsync_qt/.qtc_clangd/: compile_commands.json
tuning_app/rsync_qt/.rcc/qmlcache/: all_aotstats.aotstatslist  apprsync_qt_Main_qml.cpp  apprsync_qt_Main_qml.cpp.aotstats  apprsync_qt_qml_loader_file_list.rsp  apprsync_qt_qmlcache_loader.cpp  module_apprsync_qt.aotstatslist
tuning_app/rsync_qt/.rcc/qmllint/: apprsync_qt.rsp  apprsync_qt_json.rsp  apprsync_qt_module.rsp
tuning_app/rsync_qt/apprsync_qt_autogen/: deps  mocs_compilation.cpp
tuning_app/rsync_qt/apprsync_qt_autogen/EWIEGA46WW/: moc_RsyncRunner.cpp  moc_RsyncRunner.cpp.d  moc_RsyncRunner.cpp.json
tuning_app/rsync_qt/meta_types/: apprsync_qt_json_file_list.txt  apprsync_qt_json_file_list.txt.timestamp  qt6apprsync_qt_debug_metatypes.json.gen
tuning_app/rsync_qt/qmltypes/: apprsync_qt_foreign_types.txt
tuning_app/rsync_qt/rsync_qt/: Main.qml  apprsync_qt_qml_module_dir_map.qrc  qmldir
tuning_app/tuning_app/: ActualLeftSpeed.qml  ActualRightSpeed.qml  ActualSpeed.qml  CMakeLists.txt  LeftSpeed.qml  RightSpeed.qml  Speed.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  todelete.cpp
tuning_app/tuning_app/communication/: ros_bridge_client.cpp  ros_bridge_client.hpp
tuning_app/tuning_app/design/: covarianceDisplay.cpp  covarianceDisplay.cpp.bk  covarianceDisplay.hpp  covarianceDisplay.hpp.bk  qcgaugewidget.cpp  qcgaugewidget.h  readmeviewer.cpp  readmeviewer.h  rom_design.hpp  rom_design.hpp.backup  rom_structures.h  toedelete.cpp
tuning_app/tuning_app/sdk/: carto_rom_map_widget.cpp  carto_rom_map_widget.hpp  custom_design_for_example_class.cpp  custom_design_for_example_class.h  rom_map_widget.cpp  rom_map_widget.hpp  rom_time.cpp  rom_time.hpp
(+234 files in other folders)
